all.css -> remodal.css

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ src="https://www.facebook.com/tr?id=1655374961370442&ev=PageView&noscript=1"
 
 <!-- End Facebook Pixel Code -->
 
-   <link rel="stylesheet" href="css/all.css" />
+   <link rel="stylesheet" href="css/remodal.css" />
 
    <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
