--- a/event-template/code_of_conduct.html
+++ b/event-template/code_of_conduct.html
@@ -2,16 +2,18 @@
 <html lang="en" itemscope itemtype="http://schema.org/Organization">
   <head>
     <meta charset="UTF-8">
-    <title>DevTernity Code of Conduct</title>
+    <title>DevTernity — Code of Conduct</title>
     <link rel="shortcut icon" type="image/png" href="images/logo_brown.png"/>
   </head>
   <style>
   /*! Typebase.less v0.1.0 | MIT License */
   /* Setup */
+  @import url("http://fonts.googleapis.com/css?family=Lato:300,400");
   html {
     /* Change default typefaces here */
-    font-family: serif;
-    font-size: 137.5%;
+    font-family: "Lato", Helvetica, sans-serif;
+    font-size: 17px;
+    line-height: 1.65em;
     -webkit-font-smoothing: antialiased;
   }
   /* Copy & Lists */
@@ -58,18 +60,14 @@
     margin-bottom: 0;
     line-height: 1.5em;
   }
-  h1 {
-    font-size: 4.242rem;
-    line-height: 4.5rem;
-    margin-top: 3rem;
-  }
   h2 {
-    font-size: 2.828rem;
+    font-size: 2em;
     line-height: 3rem;
-    margin-top: 3rem;
   }
   h3 {
-    font-size: 1.414rem;
+    font-size: 1.2em;
+    font-weight: normal !important;
+    font-style: italic;
   }
   h4 {
     font-size: 0.707rem;
@@ -80,33 +78,17 @@
   h6 {
     font-size: 0.3535rem;
   }
-  /* Tables */
-  table {
-    margin-top: 1.5rem;
-    border-spacing: 0px;
-    border-collapse: collapse;
-  }
-  table td,
-  table th {
-    padding: 0;
-    line-height: 33px;
-  }
-  /* Code blocks */
-  code {
-    vertical-align: bottom;
-  }
-  /* Leading paragraph text */
-  .lead {
-    font-size: 1.414rem;
-  }
-  /* Hug the block above you */
-  .hug {
-    margin-top: 0;
+  
+
+  img {
+    width: 100px;
+    float: right;    
   }
 
   section {
+    padding: 30px;
     margin: auto;
-    width: 700px;
+    max-width: 840px;
   }
 
   hr {
@@ -121,8 +103,10 @@
   </style>
   <body>
     <section>
-    <h2>Our Code of Conduct</h2>
-    <h3>Your safety matters to us. This is our public commitment to doing all we can to ensure it.</h3>
+    <img src="images/dt_logo_rect.png" />
+    <h2>Code of Conduct</h2>
+    <h3>Your safety matters to us.</h3>
+    <h3>This is our public commitment to doing all we can to ensure it.</h3>
 
     <p><a href="http://devternity.com">DevTernity</a> is committed to providing a welcoming and harassment-free environment for participants of all races, gender and trans statuses, sexual orientations, physical abilities, physical appearances, and beliefs. We’ve written this code of conduct not because we expect bad behavior from our community—which, in our experience, is overwhelmingly kind and civil—but because we believe a clear code of conduct is one necessary part of building a respectful community space.
     </p>
@@ -143,7 +127,7 @@
   <p>
 
 <p class="smaller">
-    The above text is extensively borrowed from <a href="https://srccon.org">SRCCON</a>'s code of conduct.
+    © DevTernity OÜ, 14226860, Mõisavahe tn 38-129 Tartu, Estonia.
   </p>
 </section>
   </body>
