add dave schmit

--- a/event-template/code_of_conduct.html
+++ b/event-template/code_of_conduct.html
@@ -56,6 +56,7 @@
   h6 {
     /* Change heading typefaces here */
     font-family: sans-serif;
+    font-weight: normal;
     margin-top: 1.5rem;
     margin-bottom: 0;
     line-height: 1.5em;
@@ -66,7 +67,7 @@
   }
   h3 {
     font-size: 1.2em;
-    font-weight: normal !important;
+    font-weight: normal;
     font-style: italic;
   }
   h4 {
@@ -104,7 +105,7 @@
   <body>
     <section>
     <img src="images/dt_logo_rect.png" />
-    <h2>Code of Conduct</h2>
+    <h2>🔖 Code of Conduct</h2>
     <h3>Your safety matters to us.</h3>
     <h3>This is our public commitment to doing all we can to ensure it.</h3>
 
